src/css/index.css
.align-right {
  text-align: right !important;
}

.align-left {
  text-align: left !important;
}

.align-center {
  text-align: center !important;
}

.LazyLoad {
  display: inline-block;
}

.table-wrap {
  margin: 10px 0 15px;
}

.table {
  margin-bottom: 0;
}

.empty-td {
  height: 300px;
  background: #fbf9f9;
  text-align: center;
  vertical-align: middle !important;
}

.empty-td .spinner {
  margin: 0 auto;
}

.table th,
.checkbox {
  font-size: 15px;
  -webkit-touch-callout: none;
  -webkit-user-select: none;
  -khtml-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.table td {
  font-size: 14px;
}

.table td img {
  vertical-align: -2px;
  margin-right: 5px;
}

.info {
  font-size: 13px;
}

.field {
  margin-left: 5px;
}

.sortable {
  cursor: pointer;
}

sup {
  font-size: 8px;
  font-weight: bold;
}

.up-arrow {
  width: 0;
  height: 0;
  vertical-align: 3px;
  display: inline-block;
  border: 5px solid transparent;
  border-bottom: 5px solid #000;
}

.down-arrow {
  width: 0;
  height: 0;
  vertical-align: -3px;
  display: inline-block;
  border: 5px solid transparent;
  border-top: 5px solid #000;
}

.spinner {
  width: 50px;
  height: 40px;
  text-align: center;
  font-size: 10px;
}

.spinner > div {
  background-color: #00d1b2;
  height: 100%;
  width: 6px;
  margin-right: 2px;
  display: inline-block;

  -webkit-animation: sk-stretchdelay 1.2s infinite ease-in-out;
  animation: sk-stretchdelay 1.2s infinite ease-in-out;
}

.spinner .rect2 {
  -webkit-animation-delay: -1.1s;
  animation-delay: -1.1s;
}

.spinner .rect3 {
  -webkit-animation-delay: -1s;
  animation-delay: -1s;
}

.spinner .rect4 {
  -webkit-animation-delay: -0.9s;
  animation-delay: -0.9s;
}

.spinner .rect5 {
  -webkit-animation-delay: -0.8s;
  animation-delay: -0.8s;
}

@-webkit-keyframes sk-stretchdelay {
  0%,
  40%,
  100% {
    -webkit-transform: scaleY(0.4);
  }
  20% {
    -webkit-transform: scaleY(1);
  }
}

@keyframes sk-stretchdelay {
  0%,
  40%,
  100% {
    transform: scaleY(0.4);
    -webkit-transform: scaleY(0.4);
  }
  20% {
    transform: scaleY(1);
    -webkit-transform: scaleY(1);
  }
}

.reload-count {
  display: inline-block;
  padding: 13px 0 14px;
  line-height: 14px;
}

.hide {
  display: none !important;
}

.down {
  color: red;
}

.up {
  color: green;
}

.settings {
  margin-bottom: 10px;
}

.paging > a {
  margin-right: 5px;
}

.paging > div {
  margin-top: 6px;
}

.footer > .container {
  position: relative;
}

.footer > .container > .back-to-top {
  position: absolute;
  top: -68px;
  right: 0;
}

.dropdown-settings {
  margin-top: 5px;
}

.main-title > a {
  font-size: 32px;
}

.currency-label {
  margin-top: 5px;
  margin-right: 10px;
}

@media (max-width: 900px) {
  *,
  .checkbox,
  .info {
    font-size: 12px;
  }

  .table-wrap {
    overflow-x: scroll;
  }

  .table {
    width: 150% !important;
  }

  .table th {
    padding: 0 3px;
    font-size: 13px;
  }

  .table td {
    padding: 0 3px;
    font-size: 12px;
  }
}

@media (max-width: 550px) {
  .table {
    width: 200% !important;
  }
}

@media (max-width: 440px) {
  .dropdown-settings {
    float: left !important;
  }

  .field {
    margin-left: 0;
    margin-right: 5px;
  }

  .table {
    width: 260% !important;
  }
}

@media (max-width: 400px) {
  .notification {
    overflow-x: scroll;
  }

  .table {
    width: 350% !important;
  }
}

@media print {
  .settings,
  .table-setting,
  .info {
    display: none;
  }

  .section,
  .hero-body,
  .footer {
    padding: 10px;
  }

  .table-wrap {
    overflow-x: visible;
  }

  .table {
    width: 100%;
  }

  .footer p {
    text-align: left;
  }
}

